[package]
name = "actix-middleware-error-stacktrace-logging"
version = "0.1.0"
authors = ["Brock Smedley <brock@firstfoundry.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0"
log="0.4"
env_logger = "0.6.0"
failure="0.1"
tracing={version="0.1", features=["log-always"]}
tracing-futures="0.2"
tracing-subscriber="0.2"

[dependencies.actix-rt]
version = "1.0.0"
